[gd_scene load_steps=16 format=3 uid="uid://bhenjdi5p5ejl"]

[ext_resource type="Texture2D" uid="uid://ckkuje2xehsbg" path="res://assets/objects/button_animated.png" id="1_jj771"]
[ext_resource type="Script" path="res://scenes/objects/button_red/button_red.gd" id="1_t8urs"]
[ext_resource type="Texture2D" uid="uid://15gmdusric00" path="res://assets/objects/button_signal_button.png" id="2_o0geb"]
[ext_resource type="Texture2D" uid="uid://xtkvsxgao8tj" path="res://assets/lights/nRmVV (2).png" id="4_hew85"]

[sub_resource type="AtlasTexture" id="AtlasTexture_fijwo"]
atlas = ExtResource("2_o0geb")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_fi3r4"]
atlas = ExtResource("2_o0geb")
region = Rect2(96, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_e7ms7"]
atlas = ExtResource("2_o0geb")
region = Rect2(192, 0, 96, 96)

[sub_resource type="SpriteFrames" id="SpriteFrames_vmtu6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fijwo")
}],
"loop": true,
"name": &"OFF",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fi3r4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e7ms7")
}],
"loop": true,
"name": &"ON",
"speed": 7.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_nie04"]
atlas = ExtResource("1_jj771")
region = Rect2(288, 0, 96, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_byfjd"]
atlas = ExtResource("1_jj771")
region = Rect2(192, 0, 96, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_nd4uk"]
atlas = ExtResource("1_jj771")
region = Rect2(96, 0, 96, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_63vou"]
atlas = ExtResource("1_jj771")
region = Rect2(0, 0, 96, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_w27mo"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nie04")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_byfjd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nd4uk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_63vou")
}],
"loop": false,
"name": &"depresssed",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_63vou")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nd4uk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_byfjd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nie04")
}],
"loop": false,
"name": &"pressed",
"speed": 20.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h8olo"]
size = Vector2(96, 12)

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_hwkgt"]
blend_mode = 1

[node name="Button_red" type="Area2D"]
script = ExtResource("1_t8urs")

[node name="anim_flag" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -48)
sprite_frames = SubResource("SpriteFrames_vmtu6")
animation = &"ON"
frame_progress = 0.129534

[node name="anim" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -7)
sprite_frames = SubResource("SpriteFrames_w27mo")
animation = &"pressed"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -6)
shape = SubResource("RectangleShape2D_h8olo")

[node name="PointLight2D" type="Sprite2D" parent="."]
visible = false
modulate = Color(1, 0.24, 0.24, 0.498039)
material = SubResource("CanvasItemMaterial_hwkgt")
position = Vector2(-36, -85)
scale = Vector2(0.3, 0.3)
texture = ExtResource("4_hew85")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
